# rs-sdk

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  ffi.yml  integration.yml  rust.yml
contextvm-ffi/: .gitignore  Cargo.toml  README.md
contextvm-ffi/c-tests/: test_ffi.c
contextvm-ffi/headers/: contextvm.h
contextvm-ffi/src/: error.rs  types.rs  uniffi_types.rs
docs/: README.md  client-transport.md  discovery.md  encryption.md  gateway.md  overview.md  proxy.md  rmcp.md  server-transport.md  transports.md
examples/: discovery.rs  gateway.rs  native_echo_client.rs  native_echo_server.rs  proxy.rs  rmcp_integration_test.rs
examples/python/: .gitignore  01_offline_check.py  README.md  discover_servers.py  proxy_tools_list.py
src/: lib.rs
src/core/: constants.rs  error.rs  types.rs  validation.rs
src/discovery/: mod.rs
src/encryption/: mod.rs
src/gateway/: mod.rs
src/payments/: canonical.rs  constants.rs  errors.rs  fakes.rs  mod.rs  tags.rs  traits.rs  types.rs
src/proxy/: mod.rs
src/relay/: mock.rs  mod.rs
src/rmcp_transport/: convert.rs  mod.rs  open_stream.rs  pipeline_tests.rs  pool.rs  pool_transport.rs  transport.rs  worker.rs
src/signer/: mod.rs
src/transport/: base.rs  client.rs  dedup.rs  mod.rs  server.rs
src/transport/client/: correlation_store.rs  mod.rs  server_identity.rs  server_relay_discovery.rs
src/transport/open_stream/: mod.rs  writer.rs
src/transport/oversized_transfer/: codec.rs  constants.rs  errors.rs  frame.rs  mod.rs  receiver.rs
src/transport/server/: announcement_manager.rs  correlation_store.rs  middleware.rs  mod.rs  session_store.rs
src/util/: logger.rs
tests/: conformance_stateless_mode.rs  conformance_stores.rs  e2e_happy_path.rs  integration.rs  open_stream_e2e.rs  oversized_timeout_e2e.rs  pool_parity.rs  transport_integration.rs
tests/fixtures/: canonical_vectors.json
tools/gen-canonical-vectors/: README.md  generate.mjs  package.json
